Run JUnit tests in all modules with java.base/java.util and java.base/java.lang opened to all modules