@@ -29,6 +29,8 @@
     <spotbugs.version>4.0.0-RC1</spotbugs.version>
     <spotbugs.fail>true</spotbugs.fail>
     <springboot.version>2.3.5.RELEASE</springboot.version>
+
+    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
   </properties>
 
   <distributionManagement>
